--- a/src/app/clients/clients-list/clients-list.component.html
+++ b/src/app/clients/clients-list/clients-list.component.html
@@ -16,19 +16,26 @@
             </div>
         </div>
         <div class="card-body">
-            <table datatable class="table table-bordered table-striped table-hover">
+            <table class="table table-bordered table-striped table-hover pt-3 pb-3" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
-                    <tr>
-                      <th>Name</th>
-                      <th>Country</th>
-                      <th>Club Name</th>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let item of jsonData">
-                      <td>{{item.playerName}}</td>
-                      <td>{{item.playerCountry}}</td>
-                      <td>{{item.playerClub}}</td>
-                    </tr>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Phone number</th>
+                    <th>Address</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let user of clients">
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.name }}</td>
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.phone }}</td>
+                    <td>{{ user.address.street }}, {{ user.address.city }}</td>
+                </tr>
                 </tbody>
             </table>
         </div>
